# RadImgArray

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: workflow.yml
radimgarray/: __init__.py  base_image.py  dicom.py  nifti.py  plotting.py  seg_image.py  tools.py
src/radimgarray/: __init__.py  base_image.py  dicom.py  main.py  nifti.py  plotting.py  seg_image.py  tools.py
tests/: conftest.py  create_dicom_from_nifti.py  test_dicom.py  test_nifti.py  test_rad_img_array.py  test_seg_image.py  test_tools.py
tests/.assets/dicom/: slice_000.dcm  slice_001.dcm  slice_002.dcm
