[tool.poetry]
name = "radimgarray"
version = "0.1.0"
description = ""
authors = ["thiel <57491748+darksim33@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "radimgarray", from = "src" }]

[tool.poetry.dependencies]
python = " ~3.9 || ~3.10 || ~3.11 || ~3.12"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
pathlib = "^1.0.1"
nibabel = "^5.2.1"
pyqt6 = "^6.7.1"
pydicom = "^3.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
black = "^23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
