[tool.poetry]
name = "radimgarray"
version = "0.3.1"
description = ""
authors = ["thiel <57491748+darksim33@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "radimgarray", from = "src" }]

[tool.poetry.dependencies]
python = " ~3.9 || ~3.10 || ~3.11 || ~3.12 || ~3.13"
numpy = [
    { version = "^2.1.1", python = "^3.10" },
    { version = "^1.23.0", python = "~3.9" },
]
matplotlib = "^3.9.2"
pathlib = "^1.0.1"
nibabel = "^5.2.1"
# pyqt6 = "^6.7.1"
pydicom = [
    { version = "^3.0.1", python = "^3.10" },
    { version = "^2.2.1", python = "~3.9" },
]
imantics = "^0.1.12"
pandas = "^2.1.3"
openpyxl = "^3.0.9"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
black = "^23.3"
tox = "^4.21.2"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
