[project]
name = "radimgarray"
version = "0.3.1"
description = ""
authors = [
    { name = "thiel", email = "57491748+darksim33@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "numpy>=2.1.1; python_version >= '3.10'",
    "numpy>=1.23.0,<2.0.0; python_version < '3.10'",
    "matplotlib>=3.9.2",
    "nibabel>=5.2.1",
    "pydicom>=3.0.1; python_version >= '3.10'",
    "pydicom>=2.2.1,<3.0.0; python_version < '3.10'",
    "imantics>=0.1.12",
    "pandas>=2.1.3",
    "openpyxl>=3.0.9",
]

[pdependency-groups]
dev = [
    "pytest>=7.2",
    "black>=23.3",
    "tox>=4.21.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

